[package]
name = "cmdargs-macros"
version = "0.1.0"
edition = "2021"

authors = ["Everaldo Canuto <everaldo.canuto@gmail.com>"]
license = "Unlicense"
homepage = "https://github.com/puccinia/cmdargs.git"
repository = "https://github.com/puccinia/cmdargs.git"
description = "Macros for Rust command line argument parser "

[lib]
proc-macro = true

[dependencies]
